added the ip camera

--- a/core/missingperson/templates/card.html
+++ b/core/missingperson/templates/card.html
@@ -1,4 +1,4 @@
-<div style="position: relative; padding: 2%;">
+{% comment %} <div style="position: relative; padding: 2%;">
     <div class="row row-cols-1 row-cols-md-3 g-4">
         {% for person in missingperson %}
         <div class="row-4 mb-1">
@@ -28,4 +28,4 @@
         {% endfor %}
     </div>
 </div>
-<!-- /delete/{{person.id}}/ -->
+<!-- /delete/{{person.id}}/ --> {% endcomment %}
