--- a/core/missingperson/templates/findemail.html
+++ b/core/missingperson/templates/findemail.html
@@ -45,7 +45,7 @@
     <p>We understand the relief this news must bring to you. If you have any further questions or require more information, please do not hesitate to reach out to us.</p>
     <p>Thank you for your cooperation and concern in this matter.</p>
     <p>Sincerely,</p>
-    <p> Team Bharatiya Rescue</p>
+    <p> Team Beacon</p>
 </div>
 </body>
 </html>
