--- a/core/missingperson/templates/surveillance.html
+++ b/core/missingperson/templates/surveillance.html
@@ -71,7 +71,7 @@
             <div class="d-flex">
               <!-- Brand -->
               <a class="navbar-brand me-2 mb-1 d-flex align-items-center" href="/">
-                <h2>BHARATIYA RESCUE</h2>
+                <h2>Beacon</h2>
               </a>
             </div>
         </div>
