--- a/core/missingperson/templates/camera_list.html
+++ b/core/missingperson/templates/camera_list.html
@@ -752,7 +752,7 @@
     <header id="header" class="fixed-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
-          <a class="navbar-brand" href="/">Bharatiya Rescue</a>
+          <a class="navbar-brand" href="/">Beacon</a>
           <button
             class="navbar-toggler"
             type="button"
