--- a/core/missingperson/templates/location.html
+++ b/core/missingperson/templates/location.html
@@ -69,7 +69,7 @@
             <div class="d-flex">
               <!-- Brand -->
               <a class="navbar-brand me-2 mb-1 d-flex align-items-center" href="/">
-                <h2>BHARATIYA<br>RESCUE</h2>
+                <h2>Beacon</h2>
               </a>
             </div>
         </div>
