--- a/core/missingperson/templates/regmail.html
+++ b/core/missingperson/templates/regmail.html
@@ -32,7 +32,7 @@
         </div>
         <div class="content">
             <p>Dear {{fathers_name}},</p>
-            <p>We are writing to confirm that your case has been registered successfully with Bharatiya Rescue. Below are the details of your case:</p>
+            <p>We are writing to confirm that your case has been registered successfully with Beacon. Below are the details of your case:</p>
 
             <div class="details">
                 <p>Case Registered on: {{date_time}}</p>
@@ -42,11 +42,11 @@
             </div>
 
             <p>Your information and case details have been recorded in our system. Our team will review your case and take necessary action. You will be notified of any updates or developments regarding your case.</p>
-            <p>If you have any urgent concerns or additional information to provide, please contact our support team at support@bhratiyarecue.com.</p>
-            <p>Thank you for choosing Bharatiya Rescue. We are committed to assisting you during this time.</p>
+            <p>If you have any urgent concerns or additional information to provide, please contact our support team at support@Beacon.com.</p>
+            <p>Thank you for choosing Beacon. We are committed to assisting you during this time.</p>
 
             <p>Best regards,</p>
-            <p>Bharatiya Rescue</p>
+            <p>Beacon</p>
         </div>
     </div>
 </body>
